--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<html>
-
+<html lang="en">
 <head>
-
-<title>
-
-HTML Forms with PyScript     
-    
-</title>
-
+<title>HTML Forms with PyScript</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-
 </head>
 
 <style>
@@ -130,5 +125,17 @@ HTML Forms with PyScript
     
     </py-script>
 
+</body>
+</html>
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
 </body>
 </html>
